5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1838_2603.log
== SUBMITION (2019-06-22 22:14:53) 
-- CODE:
from numpy import *

m = array(eval(input()), dtype = int)

for j in range(4):
	v = zeros(4, dtype = int)
	k = 0
	for i in range(3, -1, -1):
		v[k] = m[i,j]
		k += 1
	k = 0
	for i in range(4):
		m[i,j] = v[k]
		k += 1

print(m)
-- EXECUTION TIME:
1.14179
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 4 4 3]
 [2 3 3 3]
 [3 2 2 3]
 [4 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 22:15:43) 
-- CODE:
from numpy import *

m = array(eval(input()), dtype = int)

for j in range(4):
	v = zeros(4, dtype = int)
	k = 0
	for i in range(3, -1, -1):
		v[k] = m[i,j]
		k += 1
	k = 0
	for i in range(4):
		m[i,j] = v[k]
		k += 1

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 22:17:36) 
-- CODE:
from numpy import*

m = array(eval(input()), dtype = int)

for j in range(4):
	v = zeros(4, dtype = int)
	k = 0
	for i in range(3, -1, -1):
		v[k] = m[i,j]
		k += 1
	k = 0
	for i in range(4):
		m[i,j] = v[k]
		k += 1

print(m)
-- EXECUTION TIME:
0.966511
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 4 4 3]
 [2 3 3 3]
 [3 2 2 3]
 [4 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 22:17:39) 
-- CODE:
from numpy import*

m = array(eval(input()), dtype = int)

for j in range(4):
	v = zeros(4, dtype = int)
	k = 0
	for i in range(3, -1, -1):
		v[k] = m[i,j]
		k += 1
	k = 0
	for i in range(4):
		m[i,j] = v[k]
		k += 1

print(m)
-- EXECUTION TIME:
1.11584
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 4 4 3]
 [2 3 3 3]
 [3 2 2 3]
 [4 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 22:18:04) 
-- CODE:
from numpy import*

m = array(eval(input()))

for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(3, -1, -1):
		v[k] = m[i,j]
		k += 1
	k = 0
	for i in range(4):
		m[i,j] = v[k]
		k += 1

print(m)
-- EXECUTION TIME:
1.13198
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 4 4 3]
 [2 3 3 3]
 [3 2 2 3]
 [4 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 22:33:02) 
-- CODE:
from numpy import*

m = array(eval(input()))

for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v[k] = m[i,j]
		k += 1
	v = sorted(v, reverse = true)
	k = 0
	for i in range(4):
		m[i,j] = v[k]
		k += 1

print(m)
-- EXECUTION TIME:
1.0832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/2603/main.py", line 11, in <module>
    v = sorted(v, reverse = true)
NameError: name 'true' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 22:33:05) 
-- CODE:
from numpy import*

m = array(eval(input()))

for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v[k] = m[i,j]
		k += 1
	v = sorted(v, reverse = true)
	k = 0
	for i in range(4):
		m[i,j] = v[k]
		k += 1

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 22:33:54) 
-- CODE:
from numpy import*

m = array(eval(input()))

for j in range(4):
	v = zeros(4)
	k = 0
	for i in range(4):
		v[k] = m[i,j]
		k += 1
	v = sorted(v, reverse = True)
	k = 0
	for i in range(4):
		m[i,j] = v[k]
		k += 1

print(m)
-- EXECUTION TIME:
1.14694
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
